--- a/css/main_about_us.css
+++ b/css/main_about_us.css
@@ -1,5 +1,5 @@
-@import url(/css/general.css);
-@import url(/css/reset.css);
+@import url(general.css);
+@import url(reset.css);
 
 
 .helloContent{
